[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/ai/AvoidWallsSeekPlayerAI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 205.022

[node name="AvoidWallsSeekPlayerAI" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
